--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ yarn-error.log*
 build/
 dist/
 
+# Package lock
+/backend/package-lock.json
+
 # Dependency directories
 /frontend/node_modules
 /backend/node_modules
