--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
-PORT = 3000
-JWT_SECRET = 'mysecretpassword'
+PORT =
+JWT_SECRET =
 DB_HOST =
 DB_USER =
 DB_PASSWORD =
-DB_NAME = 
+DB_NAME =
+ADMIN_USERNAME =
+ADMIN_PASS =
