--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ dist/
 .env.production.local
 
 # Tailwind CSS
-tailwind.config.js
+#tailwind.config.js
 
 # DaisyUI
-daisyui.config.js
+#daisyui.config.js
 
 # Editor directories and files
 .idea/
