--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.10.2",
     "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   }
 }
