--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "cross-env NODE_ENV=production node src/app.js",
     "dev": "cross-env NODE_ENV=development node --watch src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
