ai routes, controller, service (test)

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist/
 /backend/package-lock.json
 /backend/.env.dev
 /backend/pnpm-lock.yaml
+/backend/uploads
 
 # Dependency directories
 /frontend/node_modules
