--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
