--- a/frontend/justiapp/package.json
+++ b/frontend/justiapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+        "tailwindcss": "^3.4.7",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -51,7 +52,7 @@
     "postcss-apply": "^0.12.0",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^9.6.0",
-    "tailwindcss": "^3.4.7"
+    "postcss-preset-env": "^9.6.0"
+
   }
 }
