--- a/frontend/justiapp/package.json
+++ b/frontend/justiapp/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-        "tailwindcss": "^3.4.7",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +17,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
+    "recordrtc": "^5.6.2",
+    "tailwindcss": "^3.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +54,5 @@
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^9.6.0"
-
   }
 }
