--- a/frontend/justiapp/package.json
+++ b/frontend/justiapp/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
